Remove word 'hidden'

--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -259,7 +259,7 @@ WorkKeys = year
 ;       GET parameter (default = "lookfor"), limited to a specified number of
 ;       matches (default = 5). This is designed for use with non-catalog modules.
 ;       The optional custom heading overrides the default for this recommendation.
-;       Hidden filters may be defined in the specified section of the searches.ini
+;       Filters may be defined in the specified section of the searches.ini
 ;       file; see [CatalogResultsVideoFilter] below for an example of this.
 ; DPLATerms:[collapsed]
 ;       Display results from the DPLA catalog. Provide a boolean to have the sidebar
@@ -393,7 +393,7 @@ WorkKeys = year
 ;       Display Summon search results matching the terms found in the specified
 ;       GET parameter (default = "lookfor"), limited to a specified number of
 ;       matches (default = 5).
-;       Hidden filters may be defined in the specified section of the Summon.ini
+;       Filters may be defined in the specified section of the Summon.ini
 ;       file; see [CatalogResultsVideoFilter] below for an example of this. The
 ;       optional custom heading overrides the default for this recommendation module.
 ; SummonResultsDeferred:[GET parameter]:[result limit]
@@ -408,7 +408,7 @@ WorkKeys = year
 ;       Display website search results matching the terms found in the specified
 ;       GET parameter (default = "lookfor"), limited to a specified number of
 ;       matches (default = 5).  This requires the website Solr core to be active.
-;       Hidden filters may be defined in the specified section of the website.ini
+;       Filters may be defined in the specified section of the website.ini
 ;       file; see [CatalogResultsVideoFilter] below for an example of this. The
 ;       optional custom heading overrides the default for this recommendation module.
 ;
@@ -874,10 +874,10 @@ maxLimit = 100
 ; ttl, Time to Live, i.e. cache entry life time in seconds. 300 seconds by default.
 ;options[ttl] = 300
 
-; This example section provides hidden filters for the CatalogResults recommendation
+; This example section provides filters for the CatalogResults recommendation
 ; module.  The section name is specified in the recommendation module config.
 ;[CatalogResultsVideoFilter]
 
-; Hidden filters are defined as in [RawHiddenFilters] in order to handle more complex
+; Filters are defined as in [RawHiddenFilters] in order to handle more complex
 ; filter combinations.
 ;0 = "format:Video"
