Document new param on Deferred modules

--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -269,14 +269,14 @@ WorkKeys = year
 ;       GET parameter (default = "lookfor"), limited to a specified number of
 ;       matches (default = 5). The optional custom heading overrides the default
 ;       for this recommendation.
-; EDSResultsDeferred:[GET parameter]:[result limit]
+; EDSResultsDeferred:[GET parameter]:[result limit]:[custom heading]
 ;       Same as EDSResults, but loaded via AJAX.
 ; EPFResults:[GET parameter]:[result limit]:[custom heading]
 ;       Display EPF (EBSCO Publication Finder) search results matching the terms
 ;       found in the specified GET parameter (default = "lookfor"), limited to a
 ;       specified number of matches (default = 5). The optional custom heading overrides the default
 ;       for this recommendation.
-; EPFResultsDeferred:[GET parameter]:[result limit]
+; EPFResultsDeferred:[GET parameter]:[result limit]:[custom heading]
 ;       Same as EPFResults, but loaded via AJAX.
 ; EuropeanaResults:[url]:[requestParam]:[limit]:[unwanted data providers]
 ;       Display search results from Europeana.eu API.
@@ -310,14 +310,14 @@ WorkKeys = year
 ;       the specified GET parameter (default = "lookfor"), limited to a specified
 ;       number of matches (default = 5). The optional custom heading overrides the
 ;       default for this recommendation.
-; LibGuidesResultsDeferred:[GET parameter]:[result limit]
+; LibGuidesResultsDeferred:[GET parameter]:[result limit]:[custom heading]
 ;       Same as LibGuidesResults, but loaded via AJAX.
 ; LibGuidesAZResults:[GET parameter]:[result limit]:[custom heading]
 ;       Display LibGuides A-Z Databases search results matching the terms found in
 ;       the specified GET parameter (default = "lookfor"), limited to a specified
 ;       number of matches (default = 5). The optional custom heading overrides the
 ;       default for this recommendation.
-; LibGuidesAZResultsDeferred:[GET parameter]:[result limit]
+; LibGuidesAZResultsDeferred:[GET parameter]:[result limit]:[custom heading]
 ;       Same as LibGuidesAZResults, but loaded via AJAX.
 ; OpenLibrarySubjects:[GET parameter]:[limit]:[date filter]:[Subject types]
 ;       Display full-text, public scans from the Open Library (OL) Subjects API.
@@ -396,7 +396,7 @@ WorkKeys = year
 ;       Filters may be defined in the specified section of the Summon.ini
 ;       file; see [CatalogResultsVideoFilter] below for an example of this. The
 ;       optional custom heading overrides the default for this recommendation module.
-; SummonResultsDeferred:[GET parameter]:[result limit]
+; SummonResultsDeferred:[GET parameter]:[result limit]:[custom heading]:[ini section]
 ;       Same as SummonResults, but loaded via AJAX.
 ; SummonTopics:[GET parameter]
 ;       Display Summon-generated topic recommendations matching the terms found
