--- a/config/vufind/EDS.ini
+++ b/config/vufind/EDS.ini
@@ -330,7 +330,7 @@ AU = None
 ; to that database's individual website.
 [Databases]
 
-; Define the facet hierarcy path leading to each database.
+; Define the facet hierarchy path leading to each database.
 ; For EDS (the databases are at ContentProvider/list):
 ;resultFacet[] = 'ContentProvider'
 ;resultFacet[] = 'list'
