--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -1455,7 +1455,7 @@ replace_other_urls = true
 ; '1' to prefix and '0' if not.  The web service should be hosted closely such that
 ; query time is minimal.
 ; See https://github.com/lehigh-university-libraries/ezproxy-url-checker for an OSS
-; implementation of this protocol that extrats the answers from EZproxy config.
+; implementation of this protocol that extracts the answers from EZproxy config.
 ;prefixLinksWebServiceUrl = http://localhost:8888/proxyUrl
 
 ; Duration (seconds) to cache web service response data.  Default is 600.
