--- a/config/vufind/facets.ini
+++ b/config/vufind/facets.ini
@@ -364,13 +364,18 @@ custom_filter_field = "vufind"
 ;inverted_filters[include_books] = '-format:"Book"'
 
 ; Exclude filters can be specified to exclude certain filters from showing in hierarchical
-; facets.
+; facets. These settings will apply to the search results facets as default.
+; To enable them in advanced search facets, see enable_hierarchical_filters in 
+; Advanced_Settings.
 ;[HierarchicalExcludeFilters]
 ;building[] = 0/<Building>/
-;format[] = 0/<Format>/
+;format[] = 1/Book/BookPart
 
 ; Facet filters can be specified to limit hierarchical facet display to given values.
 ; If no values are specified on a facet level, all items for the level are displayed.
+; These settings will apply to the search results facets as default.
+; To enable them in advanced search facets, see enable_hierarchical_filters in 
+; Advanced_Settings
 ;[HierarchicalFacetFilters]
 ;building[] = 0/<Building>/
-;format[] = 0/<Format>/
+;format[] = 0/Book/
