--- a/config/vufind/RecordDataFormatter.ini
+++ b/config/vufind/RecordDataFormatter.ini
@@ -1,9 +1,21 @@
-; This file can be used to configure fields that have the option "configurable" set to true in
-; the RecordDataFormatterFactory. The section needs to be the field's name.
-; The field will only be shown if such a section exists. In the section you can also add
-; options that will be merged with the options specified in the RecordDataFormatterFactory.
-; E.g. to enable ISBNs if they are set "configurable" in the RecordDataFormatterFactory and to add the separator
-; option use:
+; This file can be used to set global default options for fields and to configure fields
+; that have the option "configurable" set to true.
+
+; This section is used to set global default option
+[Global]
+; Enable or disable all Fields by default (default is true)
+;enabled = false
+; Make all fields configurable
+;configurable = true
+; Use renderMethod "CombineAlt" as default renderMethod
+;renderType = "CombineAlt"
+; Change the default separator for array values (default is <br />)
+;separator = "; "
+
+; To change options on a specific configurable field you have to add a section [Field_<field's name>].
+; E.g. to enable ISBNs if they are set "configurable" in the RecordDataFormatter or by the [Global] section
+; and to add the separator option use:
 ;
-; [ISBN]
+; [Field_ISBN]
+; enabled = true
 ; separator = ' ; '
