--- a/config/vufind/RecordDataFormatter.ini
+++ b/config/vufind/RecordDataFormatter.ini
@@ -1,4 +1,4 @@
-; This file can be used to set global default options for fields and to configure fields
+; This file can be used to add new fields, set global default options for fields and to configure fields
 ; that have the option "configurable" set to true.
 
 ; This section is used to set global default option
@@ -11,11 +11,39 @@
 ;renderType = "CombineAlt"
 ; Change the default separator for array values (default is <br />)
 ;separator = "; "
+; One can also add any other option.
 
-; To change options on a specific configurable field you have to add a section [Field_<field's name>].
+; In this section extra fields can be added that are not already included in the RecordDataFormatterFactory.
+; Add the name of the field to the respective array. The field will get the option "configurable" and the rest
+; of the options need to be set in this file (see below for explanation).
+[Defaults]
+;collection-info[] =
+;collection-record[] =
+;core[] =
+;description[] =
+
+; Example:
+; core[] = "Extra"
+; core[] = "MySpecialField"
+; to add the two fields "Extra" and "MySpecialField" to core. See below for the configuration.
+
+
+; To change options on a specific configurable field one has to add a section [Field_<field's name>].
 ; E.g. to enable ISBNs if they are set "configurable" in the RecordDataFormatter or by the [Global] section
 ; and to add the separator option use:
 ;
 ; [Field_ISBN]
 ; enabled = true
 ; separator = ' ; '
+;
+; And to configure the fields added in the example of the [Defaults] section:
+;
+; [Field_Extra]
+; dataMethod = "getExtra"
+; pos = 1000
+;
+; [Field_MySpecialField]
+; dataMethod = "getMySpecialField"
+; pos = 1500
+; renderType = "RecordDriverTemplate"
+; template = "data-mySpecialField.phtml"
