--- a/config/vufind/RecordDataFormatter.ini
+++ b/config/vufind/RecordDataFormatter.ini
@@ -1,13 +1,13 @@
-; This file can be used to add new fields, set global default options for fields and to configure fields
+; This file can be used to set global default options for fields, to add new fields and to configure fields
 ; that have the option "configurable" set to true.
 
-; This section is used to set global default option
+; This section is used to set global default option.
 [Global]
 ; Enable or disable all Fields by default (default is true)
 ;enabled = false
-; Make all fields configurable
+; Make all fields configurable (default is false)
 ;configurable = true
-; Use renderMethod "CombineAlt" as default renderMethod
+; Use change default renderMethod (default is "Simple")
 ;renderType = "CombineAlt"
 ; Change the default separator for array values (default is <br />)
 ;separator = "; "
@@ -26,7 +26,6 @@
 ; core[] = "Extra"
 ; core[] = "MySpecialField"
 ; to add the two fields "Extra" and "MySpecialField" to core. See below for the configuration.
-
 
 ; To change options on a specific configurable field one has to add a section [Field_<field's name>].
 ; E.g. to enable ISBNs if they are set "configurable" in the RecordDataFormatter or by the [Global] section
