added comment to config

--- a/config/vufind/searchbox.ini
+++ b/config/vufind/searchbox.ini
@@ -57,6 +57,8 @@ target[] = "http://www.google.com/search?q="
 label[] = Google
 group[] = "Other Sites"
 
+; Uncomment one or more of the lines below to enable virtual on-screen keyboard support
+; using the specified layout(s).
 [VirtualKeyboard]
 ;layouts[] = "arabic"
 ;layouts[] = "assamese"
