--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -481,7 +481,7 @@ method         = Database
 ;method         = Facebook
 ;method         = PasswordAccess
 ;method         = Email
-;method         = SimulatedSSO ; INTENDED FOR TEST/DEVELOPMENT PURPOSES ONLY
+;method         = SimulatedSSO ; FOR TESTING ONLY -- see SimulatedSSO.ini
 
 ; This setting only applies when method is set to ILS.  It determines which
 ; field of the ILS driver's patronLogin() return array is used as the username
