--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -262,6 +262,10 @@ WorkKeys = year
 ;       Display catalog search results matching the terms found in the specified
 ;       GET parameter (default = "lookfor"), limited to a specified number of
 ;       matches (default = 5).  This is designed for use with non-catalog modules.
+; Databases:[result limit]:[ini name]
+;       Displays a list of the databases referenced in EDS or similar facets, each
+;       linking to its individual website.  The .ini file must contain a [Databases]
+;       section with the relevant configuration; see example in EDS.ini.
 ; DPLATerms:[collapsed]
 ;       Display results from the DPLA catalog. Provide a boolean to have the sidebar
 ;       collapsed or open on page load.
