--- a/config/vufind/RecordDataFormatter.ini
+++ b/config/vufind/RecordDataFormatter.ini
@@ -1,21 +1,19 @@
 ; This file can be used to set global default options for fields, to add new fields and to configure fields
-; that have the option "configurable" set to true.
+; in the RecordDataFormatter.
 
 ; This section is used to set global default option.
 [Global]
-; Enable or disable all Fields by default (default is true)
+; Enable or disable all fields by default (default is true)
 ;enabled = false
-; Make all fields configurable (default is false)
-;configurable = true
 ; Use change default renderMethod (default is "Simple")
 ;renderType = "CombineAlt"
 ; Change the default separator for array values (default is <br />)
 ;separator = "; "
 ; One can also add any other option.
 
-; In this section extra fields can be added that are not already included in the RecordDataFormatterFactory.
-; Add the name of the field to the respective array. The field will get the option "configurable" and the rest
-; of the options need to be set in this file (see below for explanation).
+; In this section, extra fields can be added that are not already included in the RecordDataFormatterFactory.
+; Add the name of the field to the respective array. The options of the field need to be set in
+; this file (see below for explanation).
 [Defaults]
 ;collection-info[] =
 ;collection-record[] =
@@ -27,9 +25,8 @@
 ; core[] = "MySpecialField"
 ; to add the two fields "Extra" and "MySpecialField" to core. See below for the configuration.
 
-; To change options on a specific configurable field one has to add a section [Field_<field's name>].
-; E.g. to enable ISBNs if they are set "configurable" in the RecordDataFormatter or by the [Global] section
-; and to add the separator option use:
+; To change options on a specific field one has to add a section [Field_<field's name>].
+; E.g. to enable ISBNs and to add the separator option use:
 ;
 ; [Field_ISBN]
 ; enabled = true
