--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -874,6 +874,7 @@ maxLimit = 100
 ; list contains links to the explanation why a title was found and how the relevance
 ; is calculated.
 [Explain]
+; The explain feature is disabled by default. Uncomment the following line to enable it
 ;enabled = true
 ; The explanation is split into the main fields and a rest.
 ; minPercent gives a lower bound for fields to be included. All fields with
@@ -882,4 +883,4 @@ maxLimit = 100
 ; maxFields gives a upper bound for the number of main fields. Set negative for no boundary.
 ;maxFields = -1
 ; Number of decimal places to be displayed.
-;decimal_places = 2
+;decimalPlaces = 2
