More flexible configuration.

--- a/config/vufind/SimulatedSSO.ini
+++ b/config/vufind/SimulatedSSO.ini
@@ -8,6 +8,8 @@
 username = fakeuser1
 
 ; Map of user attributes to set (corresponding to columns in the user table).
+; Comment this out to use defaults, and set "attributes = false" to disable all
+; attributes.
 attributes[firstname] = Test
 attributes[lastname] = User
 attributes[email] = "fake@example.com"
