Rename $iniSection for clarity

--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -258,7 +258,7 @@ WorkKeys = year
 ;
 ; Available modules recommended for use in the side area:
 ;
-; CatalogResults:[GET parameter]:[result limit]:[custom heading]:[ini section]
+; CatalogResults:[GET parameter]:[result limit]:[custom heading]:[filter ini section]
 ;       Display catalog search results matching the terms found in the specified
 ;       GET parameter (default = "lookfor"), limited to a specified number of
 ;       matches (default = 5). This is designed for use with non-catalog modules.
@@ -397,7 +397,7 @@ WorkKeys = year
 ;       specified when combining this module with a non-Summon-based search module.
 ; SummonDatabasesDeferred:[GET parameter]
 ;       Same as SummonDatabases, but loaded via AJAX.
-; SummonResults:[GET parameter]:[result limit]:[custom heading]:[ini section]
+; SummonResults:[GET parameter]:[result limit]:[custom heading]:[filter ini section]
 ;       Display Summon search results matching the terms found in the specified
 ;       GET parameter (default = "lookfor"), limited to a specified number of
 ;       matches (default = 5).
@@ -412,7 +412,7 @@ WorkKeys = year
 ;       Summon search, the [GET parameter] setting will be ignored and the actual
 ;       current Summon search will be used instead.  The parameter only needs to be
 ;       specified when combining this module with a non-Summon-based search module.
-; WebResults:[GET parameter]:[result limit]:[custom heading]:[ini section]
+; WebResults:[GET parameter]:[result limit]:[custom heading]:[filter ini section]
 ;       Display website search results matching the terms found in the specified
 ;       GET parameter (default = "lookfor"), limited to a specified number of
 ;       matches (default = 5).  This requires the website Solr core to be active.
