Add option for minimum length

--- a/config/vufind/EDS.ini
+++ b/config/vufind/EDS.ini
@@ -360,6 +360,10 @@ AU = None
 ; Default is true.  These are displayed above facet matches.
 ;useQuery = true
 
+; Ignore the search query if it is below this length, ignoring
+; useQuery above.
+;useQueryMinLength = 3
+
 ; Load database URLs from LibGuides.  Default is false.
 ; Requires configuration in LibGuidesAPI.ini. 
 ;useLibGuides = true
