--- a/config/vufind/EDS.ini
+++ b/config/vufind/EDS.ini
@@ -356,6 +356,14 @@ AU = None
 ; For EDS:
 ;resultFacetNameKey = 'value'
 
+; Also display databases whose names contain the search query.
+; Default is true.  These are displayed above facet matches.
+;useQuery = true
+
+; Ignore the search query if it is below this length, ignoring
+; useQuery above.
+;useQueryMinLength = 3
+
 ; Load database URLs from LibGuides.  Default is false.
 ; Requires configuration in LibGuidesAPI.ini. 
 ;useLibGuides = true
