--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -282,8 +282,8 @@ WorkKeys = year
 ; EPFResults:[GET parameter]:[result limit]:[custom heading]
 ;       Display EPF (EBSCO Publication Finder) search results matching the terms
 ;       found in the specified GET parameter (default = "lookfor"), limited to a
-;       specified number of matches (default = 5). The optional custom heading overrides the default
-;       for this recommendation.
+;       specified number of matches (default = 5). The optional custom heading
+;       overrides the default for this recommendation.
 ; EPFResultsDeferred:[GET parameter]:[result limit]:[custom heading]
 ;       Same as EPFResults, but loaded via AJAX.
 ; EuropeanaResults:[url]:[requestParam]:[limit]:[unwanted data providers]
