--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -1791,6 +1791,7 @@ hi          = "Hindi"
 hy          = "Armenian"
 uk          = "Ukrainian"
 se          = "Northern Sámi"
+mn          = "Mongolian"
 
 ; This section contains special cases for languages such as right-to-left support
 [LanguageSettings]
