--- a/config/vufind/RecordDataFormatter.ini
+++ b/config/vufind/RecordDataFormatter.ini
@@ -5,11 +5,12 @@
 [Global]
 ; Enable or disable all fields by default (default is true)
 ;enabled = false
-; Use change default renderMethod (default is "Simple")
+; Change the default renderMethod (default is "Simple")
 ;renderType = "CombineAlt"
 ; Change the default separator for array values (default is <br />)
 ;separator = "; "
-; One can also add any other option.
+; One can also add any other option. See https://vufind.org/wiki/development:architecture:record_data_formatter
+; for all available options.
 
 ; In this section, extra fields can be added that are not already included in the RecordDataFormatterFactory.
 ; Add the name of the field to the respective array. The options of the field need to be set in
@@ -26,7 +27,7 @@
 ; to add the two fields "Extra" and "MySpecialField" to core. See below for the configuration.
 
 ; To change options on a specific field one has to add a section [Field_<field's name>].
-; E.g. to enable ISBNs and to add the separator option use:
+; E.g. to enable ISBNs and to override the separator option use:
 ;
 ; [Field_ISBN]
 ; enabled = true
