added options to make elements sticky

--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -157,6 +157,10 @@ listThumbnailsOnLeft = true
 accountThumbnailsOnLeft = true
 ; Show thumbnail on opposite side in right-to-left languages?
 mirrorThumbnailsRTL = true
+; Uncomment to make some elements sticky so that they don't leave the screen when scrolling
+;stickyElements[] = "navbar-banner"
+;stickyElements[] = "navbar-search"
+;stickyElements[] = "home-search"
 ; Handle menu as an offcanvas slider at mobile sizes (in bootstrap3-based themes)
 offcanvas = false
 ; Show (true) / Hide (false) Book Bag - Default is Hide.
