context sensitive configs

--- a/config/vufind/RecordDataFormatter.ini
+++ b/config/vufind/RecordDataFormatter.ini
@@ -44,3 +44,14 @@
 ;pos = 1500
 ;renderType = "RecordDriverTemplate"
 ;template = "data-mySpecialField.phtml"
+
+; If you want to apply some options to a specific context only you can use the overrideContext option.
+; Add overrideContext[<context>] = <context options section> where <context> is either "collection-info",
+; "collection-record", "core" or "description" and add the options in a new section [<context options section>].
+; E.g. to enable "Published" in the core view only:
+;[Field_Published]
+;enabled = false
+;overrideContext['core'] = Core_Published
+;
+;[Core_Published]
+;enabled = true
