Databases: Use LibGuides alternate names field

--- a/config/vufind/EDS.ini
+++ b/config/vufind/EDS.ini
@@ -368,6 +368,10 @@ AU = None
 ; Requires configuration in LibGuidesAPI.ini. 
 ;useLibGuides = true
 
+; Find database URLs by the LibGuides alternate names field in addition
+; to the primary name. Default is true. Requires useLibGuides = true. 
+;useLibGuidesAlternateNames = false
+
 ; Map of database name (matching EDS API 'DbLabel' value) to website URL.
 ; These databases are added to any retrieved from LibGuides, and override
 ; the LibGuides URLs if the same name is present here.
