--- a/config/vufind/EDS.ini
+++ b/config/vufind/EDS.ini
@@ -245,6 +245,13 @@ SU                  = Subject
 ; be dynamically loaded from the API.
 [Sorting]
 
+; This section allows you to specify hidden sorting options. They can be used to create a
+; whitelist of sort values using regular expressions. If you want to do this add regexes to
+; the pattern[] array. All sort values that match at least one of these pattern are allowed
+; in searches. But they will not be shown in the sort selection in the result list.
+[HiddenSorting]
+;pattern[] = .* ; E.g. uncomment this line to allow any value
+
 ; This section controls the behavior of the EDSRecord module.
 [Record]
 ; Set this to true in order to enable "next" and "previous" links to navigate
