--- a/config/vufind/Primo.ini
+++ b/config/vufind/Primo.ini
@@ -232,6 +232,13 @@ scdate = sort_year
 screator = sort_author
 stitle = sort_title
 
+; This section allows you to specify hidden sorting options. They can be used to create a
+; whitelist of sort values using regular expressions. If you want to do this add regexes to
+; the pattern[] array. All sort values that match at least one of these pattern are allowed
+; in searches. But they will not be shown in the sort selection in the result list.
+[HiddenSorting]
+;pattern[] = .* ; E.g. uncomment this line to allow any value
+
 ; This section specifies permission rules which may be used to determine the
 ; institution code and access level for the current user when retrieving Primo
 ; results. institutionCode is evaluated first, then onCampusRule, with
