--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -1838,6 +1838,17 @@ era             = true      ; allow browsing of era subdivisions
 ; <result_limit> most popular entries -- it only affects display order.
 ;alphabetical_order = true
 
+; This section is used to configure bulk actions.
+[BulkActions]
+; Set the limit of items for each action. Set 0 to disable the action and hide the button.
+; Depending on you setup you may be able to increase the limits or have to decrease them
+; for the actions to work properly.
+limits["email"] = 100
+limits["export"] = 100
+limits["printcart"] = 100
+limits["save"] = 100
+limits["delete"] = 100
+
 ; This section controls the availability of export methods.
 ;
 ; Each entry may be a comma-separated list of contexts in which the export
@@ -1867,6 +1878,18 @@ RIS = false
 ; format section of export.ini; default is 'link' if not overridden below. See
 ; export.ini for more details on available options.
 ;defaultType = download
+
+; This overrides the limit of exports in the BulkActions section per method. Note that they
+; can not exceed that limit and can only be used to further restrict the number of items that
+; can be used per export.
+limits["RefWorks"] = 100
+limits["EndNote"] = 100
+limits["EndNoteWeb"] = 100
+limits["MARC"] = 100
+limits["MARCXML"] = 100
+limits["RDF"] = 100
+limits["BibTeX"] = 100
+limits["RIS"] = 100
 
 ;AddThis is optional. It uses the Add This tool available from www.addthis.com
 ; and requires the username generated when an analytics account is registered.
