--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -896,7 +896,7 @@ maxLimit = 100
 ; is calculated.
 [Explain]
 ; The explain feature is disabled by default. Uncomment the following line to enable it
-enabled = true
+;enabled = true
 ; The explanation is split into the main fields and a rest.
 ; minPercent gives a lower bound for fields to be included. All fields with
 ; a percentage lower than minPercent are summarized in the rest.
