Changed the permission needed to access the notifications administration to "notifications.Admin". Login is required by default, usernames can be set to restrict the access even more. If the permission is not granted an error message will be displayed.

--- a/config/vufind/permissionBehavior.ini
+++ b/config/vufind/permissionBehavior.ini
@@ -91,3 +91,6 @@ deniedTemplateBehavior = showTemplate:error/loginForAccess
 ; block this for some users, you should change the defaultAccountPage in
 ; config.ini to avoid causing login problems.
 ;deniedControllerBehavior = "exception::You are not logged in!"
+
+[notifications.Admin]
+deniedControllerBehavior = "showMessage:Access to notifications administration not granted"
