--- a/config/vufind/permissions.ini
+++ b/config/vufind/permissions.ini
@@ -185,6 +185,8 @@ role = loggedin
 ;ipRange[] = "127.0.0.1"
 
 ; Example permission for Notifications
-;[notifications.Admin]
-;permission[] = access.AdminModule
+[notifications.Admin]
+permission[] = notifications.Admin
+role = loggedin
+; Add usernames to restrict the access to certain users
 ;username[] = admin
