--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -1841,8 +1841,9 @@ era             = true      ; allow browsing of era subdivisions
 ; This section is used to configure bulk actions.
 [BulkActions]
 ; Set the limit of items for each action. Set 0 to disable the action and hide the button.
-; Depending on you setup you may be able to increase the limits or have to decrease them
+; Depending on your setup you may be able to increase the limits or have to decrease them
 ; for the actions to work properly.
+limits["default"] = 100
 limits["email"] = 100
 limits["export"] = 100
 limits["printcart"] = 100
