--- a/config/vufind/export.ini
+++ b/config/vufind/export.ini
@@ -41,17 +41,20 @@
 
 [RefWorks]
 requiredMethods[] = getTitle
+limit = 100
 redirectUrl = "{config|RefWorks|url|https://www.refworks.com}/express/expressimport.asp?vendor={encodedConfig|RefWorks|vendor|VuFind}&filter=RefWorks%20Tagged%20Format&encoding=65001"
 bulkExportType = post
 postField = ImportData
 
 [EndNoteWeb]
 requiredMethods[] = getTitle
+limit = 100
 redirectUrl = "{config|EndNoteWeb|url|https://www.myendnoteweb.com/EndNoteWeb.html}?partnerName={encodedConfig|EndNoteWeb|vendor|VuFind}&dataRequestUrl={encodedCallback}&func=directExport&dataIdentifier=1&Init=Yes&SrcApp=CR&returnCode=ROUTER.Unauthorized"
 headers[] = "Content-type: text/plain; charset=utf-8"
 
 [EndNote]
 requiredMethods[] = getTitle
+limit = 100
 headers[] = "Pragma: public"
 headers[] = "Expires: Thu, 01 Dec 1994 16:00:00 GMT"
 headers[] = "Cache-Control: must-revalidate, post-check=0, pre-check=0, private"
@@ -60,11 +63,13 @@ headers[] = "Content-Disposition: attachment; filename=\"vufind.enw\";"
 
 [MARC]
 requiredMethods[] = getMarcReader
+limit = 100
 headers[] = "Content-type: application/MARC"
 headers[] = "Content-Disposition: attachment; filename=\"VuFindExport.mrc\";"
 
 [MARCXML]
 requiredMethods[] = getMarcReader
+limit = 100
 headers[] = "Content-type: text/xml"
 headers[] = "Content-Disposition: attachment; filename=\"VuFindExport.xml\";"
 combineNamespaces[] = "marc21|http://www.loc.gov/MARC21/slim"
@@ -72,12 +77,15 @@ combineXpath = "/marc21:collection/marc21:record"
 
 [RDF]
 requiredMethods[] = getRDFXML
+limit = 100
 headers[] = "Content-type: application/rdf+xml"
 
 [BibTeX]
 requiredMethods[] = getTitle
+limit = 100
 headers[] = "Content-type: application/x-bibtex; charset=utf-8"
 
 [RIS]
 requiredMethods[] = getTitle
+limit = 100
 headers[] = "Content-type: application/x-research-info-systems; charset=utf-8"
