fix: onChange and input for virtual keyboard.

--- a/config/vufind/searchbox.ini
+++ b/config/vufind/searchbox.ini
@@ -69,7 +69,7 @@ group[] = "Other Sites"
 ;layouts[] = "burmese"
 ;layouts[] = "chinese"
 ;layouts[] = "czech"
-;layouts[] = "english"
+layouts[] = "english"
 ;layouts[] = "farsi"
 ;layouts[] = "french"
 ;layouts[] = "georgian"
