--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -1846,8 +1846,8 @@ era             = true      ; allow browsing of era subdivisions
 limits["default"] = 100
 limits["email"] = 100
 limits["export"] = 100
-limits["printcart"] = 100
-limits["save"] = 100
+limits["print"] = 100
+limits["saveCart"] = 100
 limits["delete"] = 100
 
 ; This section controls the availability of export methods.
@@ -1879,18 +1879,6 @@ RIS = false
 ; format section of export.ini; default is 'link' if not overridden below. See
 ; export.ini for more details on available options.
 ;defaultType = download
-
-; This overrides the limit of exports in the BulkActions section per method. Note that they
-; can not exceed that limit and can only be used to further restrict the number of items that
-; can be used per export.
-limits["RefWorks"] = 100
-limits["EndNote"] = 100
-limits["EndNoteWeb"] = 100
-limits["MARC"] = 100
-limits["MARCXML"] = 100
-limits["RDF"] = 100
-limits["BibTeX"] = 100
-limits["RIS"] = 100
 
 ;AddThis is optional. It uses the Add This tool available from www.addthis.com
 ; and requires the username generated when an analytics account is registered.
