Add translations for keyboard layouts.

--- a/config/vufind/searchbox.ini
+++ b/config/vufind/searchbox.ini
@@ -84,7 +84,7 @@ group[] = "Other Sites"
 ;layouts[] = "kannada"
 ;layouts[] = "korean"
 ;layouts[] = "kurdish"
-;layouts[] = "malayalm"
+;layouts[] = "malayalam"
 ;layouts[] = "nigerian"
 ;layouts[] = "nko"
 ;layouts[] = "norwegian"
