--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -1842,7 +1842,8 @@ era             = true      ; allow browsing of era subdivisions
 [BulkActions]
 ; Set the limit of items for each action. Set 0 to disable the action and hide the button.
 ; Depending on your setup you may be able to increase the limits or have to decrease them
-; for the actions to work properly.
+; for the actions to work properly. limits["default"] is used for all actions that do not have
+; a limit themself.
 limits["default"] = 100
 limits["email"] = 100
 limits["export"] = 100
