--- a/config/vufind/combined.ini
+++ b/config/vufind/combined.ini
@@ -33,6 +33,14 @@
 ;         the side column. If set to false, side recommendations will be suppressed
 ;         (default). Adding the same recommendation module to multiple sections is
 ;         unsupported.
+; include_recommendations_noresults = If set to an array of recommendation settings
+;         (as per searches.ini), the specified recommendations will be loaded into
+;         the results column. If set to false, noresults recommendations will be 
+;         suppressed (default). Adding the same recommendation module to multiple
+;         sections is unsupported.
+; include_recommendations_noresults_side = Like include_recommendations_noresults,
+;         but the specified recommendations will be loaded into the sidebar
+;         column.
 ; filter = One or more filters to apply to search results displayed in the column.
 ;          Use multiple "filter[] = ..." lines if multiple filters are needed.
 ; hiddenFilter = One or more hidden filters to apply to search results displayed in
