--- a/config/vufind/SierraRest.ini
+++ b/config/vufind/SierraRest.ini
@@ -268,3 +268,22 @@ title_hold_excluded_item_codes = "e"
 ;display_orders = false
 ; Whether to check holdings records in search results (default is true):
 ;check_holdings_in_results = true
+
+[InnReach]
+;This setting will display held and checked out items from INN-Reach systems
+;in order to get title information from INN-Reach we need to connect to Sierra DNA
+dna_url = [DNA address]
+dna_port = 1032
+dna_db = iii
+dna_user = [user]
+dna_password = [password]
+;toggle enabled to true to turn on InnReach Integration
+enabled = true
+;this character probably doesn't need changed. Records from InnReach contain an @ symbol in them for most systems
+identifier = "@"
+;the placeholders exist because displaying checkouts can return errors when the
+;bib/item does not exist in the catalog.
+;a placeholderBib for checked out items - this should match a testing bib in your catalog
+placeholderBib= "5094995"
+;a placeholder item id for checked out items - this should match a testing item id in your catalog
+placeholderId = "10355637"
