Innovative Inn-Reach Integration config
Unset "enabled" by default.

--- a/config/vufind/SierraRest.ini
+++ b/config/vufind/SierraRest.ini
@@ -278,7 +278,7 @@ dna_db = iii
 dna_user = [user]
 dna_password = [password]
 ;toggle enabled to true to turn on InnReach Integration
-enabled = true
+enabled = false
 ;this character probably doesn't need changed. Records from InnReach contain an @ symbol in them for most systems
 identifier = "@"
 ;the placeholders exist because displaying checkouts can return errors when the
