Minor adjustments to comments in SierraRest.ini

--- a/config/vufind/SierraRest.ini
+++ b/config/vufind/SierraRest.ini
@@ -269,15 +269,17 @@ title_hold_excluded_item_codes = "e"
 ; Whether to check holdings records in search results (default is true):
 ;check_holdings_in_results = true
 
+; This section can be configured to allow display of held and checked out items from
+; INN-Reach systems
 [InnReach]
-;This setting will display held and checked out items from INN-Reach systems
-;in order to get title information from INN-Reach we need to connect to Sierra DNA
+; In order to get title information from INN-Reach we need to connect to Sierra DNA
 dna_url = [DNA address]
 dna_port = 1032
 dna_db = iii
 dna_user = [user]
 dna_password = [password]
-;toggle enabled to true to turn on InnReach Integration
+; Toggle enabled to true to turn on InnReach Integration
 enabled = false
-;this character probably doesn't need changed. Records from InnReach contain an @ symbol in them for most systems
+; This character probably doesn't need to be changed. Records from InnReach contain an
+; @ symbol in them for most systems
 identifier = "@"
