Make default sort configurable for new items.

--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -589,6 +589,8 @@ ranges = 1,5,30
 ; set the value too low, you may get the same results no matter which range setting
 ; is selected!
 result_pages = 10
+; The default sort to use (if different from the normally configured default).
+;default_sort = year
 ; This setting can be used to automatically apply filter queries to the New Item
 ; results.  For example, you might want to filter out certain content types.  You
 ; can add multiple filters by repeating the "filter[] =" line, or you can skip
