Add support for pre-filtering new items.

--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -591,6 +591,10 @@ ranges = 1,5,30
 result_pages = 10
 ; The default sort to use (if different from the normally configured default).
 ;default_sort = year
+; Set to true to include pre-filtering facet options. By default this will use the
+; same facet options as the Advanced search screen, but this behavior can be
+; overridden; see [NewItems] and [NewItems_Settings] in facets.ini.
+include_facets = true
 ; This setting can be used to automatically apply filter queries to the New Item
 ; results.  For example, you might want to filter out certain content types.  You
 ; can add multiple filters by repeating the "filter[] =" line, or you can skip
