Search an external VuFind or ReShare instance

--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -312,6 +312,13 @@ WorkKeys = year
 ;       if [ini name] is left out, it defaults to "facets."  Rather than using
 ;       facets to limit the existing search, this module uses them to start a new
 ;       search showing all records matching the selected facet value.
+; ExternalVuFind:[requestParam]:[limit]:[ini section]
+;       Display and link to results in an external instance of VuFind, such as a
+;       ReShare-hosted consortium catalog. See ExternalVuFind.ini for details, and
+;       configure in the section of that file referenced by "ini section". Display
+;       search results matching the terms found in the specified GET parameter
+;       (default = "lookfor"), limited to a specified number of matches
+;       (default = 5).
 ; FacetCloud:[ini section]:[ini name]
 ;       Same functionality as ExpandFacets, but with a more compact interface to
 ;       allow the display of more values.
