Rename 'external' to 'consortial' for UX clarity

--- a/config/vufind/ConsortialVuFind.ini
+++ b/config/vufind/ConsortialVuFind.ini
@@ -1,10 +1,8 @@
-; This file configures the ExternalVuFind recommendation module, which searches
+; This file configures the ConsortialVuFind recommendation module, which searches
 ; a separate instance of VuFind via its public API and links to the record and
-; results pages hosted within that instance.
-;
-; One intended use case is to search and link to a consortial catalog, such as
-; ReShare, which uses its own VuFind instance to display consortium holdings
-; and facilitate borrowing between institutions.
+; results pages hosted within that instance.  This is intended to search and link
+; to a consortial catalog, such as ReShare, which uses its own VuFind instance to
+; display consortium holdings and facilitate borrowing between institutions.
 
 ; The section name is specified in the recommendation module config.
 ; This example section provides filters for a ReShare instance.
