--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -272,6 +272,13 @@ WorkKeys = year
 ;       The optional custom heading overrides the default for this recommendation.
 ;       Filters may be defined in the specified section of the searches.ini
 ;       file; see [CatalogResultsVideoFilter] below for an example of this.
+; ConsortialVuFind:[requestParam]:[limit]:[ini section]
+;       Display and link to results in an external, consortial instance of VuFind,
+;       such as a ReShare-hosted catalog. See ConsortialVuFind.ini for details, and
+;       configure in the section of that file referenced by "ini section". Display
+;       search results matching the terms found in the specified GET parameter
+;       (default = "lookfor"), limited to a specified number of matches
+;       (default = 5).
 ; Databases:[result limit]:[ini name]
 ;       Displays a list of the databases referenced in EDS or similar facets, each
 ;       linking to its individual website.  The .ini file must contain a [Databases]
@@ -312,13 +319,6 @@ WorkKeys = year
 ;       if [ini name] is left out, it defaults to "facets."  Rather than using
 ;       facets to limit the existing search, this module uses them to start a new
 ;       search showing all records matching the selected facet value.
-; ExternalVuFind:[requestParam]:[limit]:[ini section]
-;       Display and link to results in an external instance of VuFind, such as a
-;       ReShare-hosted consortium catalog. See ExternalVuFind.ini for details, and
-;       configure in the section of that file referenced by "ini section". Display
-;       search results matching the terms found in the specified GET parameter
-;       (default = "lookfor"), limited to a specified number of matches
-;       (default = 5).
 ; FacetCloud:[ini section]:[ini name]
 ;       Same functionality as ExpandFacets, but with a more compact interface to
 ;       allow the display of more values.
