--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -279,6 +279,8 @@ WorkKeys = year
 ;       search results matching the terms found in the specified GET parameter
 ;       (default = "lookfor"), limited to a specified number of matches
 ;       (default = 5).
+; ConsortialVuFindDeferred:[requestParam]:[limit]:[ini section]
+;       Same as ConsortialVuFind, but loaded via AJAX.
 ; Databases:[result limit]:[ini name]
 ;       Displays a list of the databases referenced in EDS or similar facets, each
 ;       linking to its individual website.  The .ini file must contain a [Databases]
