Databases: Add a link to all databases

--- a/config/vufind/EDS.ini
+++ b/config/vufind/EDS.ini
@@ -371,6 +371,10 @@ AU = None
 ; useQuery above.
 ;useQueryMinLength = 3
 
+; Display a link to an external list of all databases, below the
+; results. Default (null) omits the link.
+;linkToAllDatabases = https://some.url
+
 ; Load database URLs from LibGuides.  Default is false.
 ; Requires configuration in LibGuidesAPI.ini. 
 ;useLibGuides = true
