--- a/config/vufind/Primo.ini
+++ b/config/vufind/Primo.ini
@@ -129,6 +129,8 @@ dateRange[] = creationdate
 [Facets]
 tlevel  = "Limit To"
 rtype   = "Format"
+; creator does not work with CDI, but could be usable with a local Primo index
+;creator = "Author"
 jtitle  = "Journal Title"
 topic   = Subjects
 creationdate = "Year of Publication"
