--- a/config/vufind/combined.ini
+++ b/config/vufind/combined.ini
@@ -33,11 +33,12 @@
 ;         the side column. If set to false, side recommendations will be suppressed
 ;         (default). Adding the same recommendation module to multiple sections is
 ;         unsupported.
-; include_recommendations_noresults = If set to an array of recommendation settings
-;         (as per searches.ini), the specified recommendations will be loaded into
-;         the results column. If set to false, noresults recommendations will be 
-;         suppressed (default). Adding the same recommendation module to multiple
-;         sections is unsupported.
+; include_recommendations_noresults = If set to true, standard 'top'
+;         recommendations will be displayed at the top of the column. If set to an
+;         array of recommendation settings (as per searches.ini), the specified
+;         recommendations will be loaded into the results column. If set to false,
+;         noresults recommendations will be suppressed (default). Adding the same
+;         recommendation module to multiple sections is unsupported.
 ; include_recommendations_noresults_side = Like include_recommendations_noresults,
 ;         but the specified recommendations will be loaded into the sidebar
 ;         column.
