--- a/config/vufind/ConsortialVuFind.ini
+++ b/config/vufind/ConsortialVuFind.ini
@@ -11,7 +11,7 @@
 ;api_base_url = 'https://myconsortium.reshare.indexdata.com/api/v1'
 ; Base URL of a search results page. Required.
 ;results_base_url = 'https://myconsortium.reshare.indexdata.com/Search/Results'
-; Base URL of a record page. Reqired.
+; Base URL of a record page. Required.
 ;record_base_url = 'https://myconsortium.reshare.indexdata.com/Record'
 ; Define any optional filters used for the search.
 ; This example excludes records that are not loanable to other institutions.
