Rename connection and ini file to 'external'

--- a/config/vufind/ExternalVuFind.ini
+++ b/config/vufind/ExternalVuFind.ini
@@ -1,7 +1,8 @@
-; This file configures the ConsortialVuFind recommendation module, which searches
-; a separate instance of VuFind via its public API and links to the record and
-; results pages hosted within that instance.  This is intended to search and link
-; to a consortial catalog, such as ReShare, which uses its own VuFind instance to
+; This file configures the the ExternalVuFind connection service, which
+; searches a separate instance of VuFind via its public API.
+
+; That connection is used by the ConsortialVuFind recommendation module,
+; which searches and links to a consortial catalog such as ReShare, to
 ; display consortium holdings and facilitate borrowing between institutions.
 
 ; The section name is specified in the recommendation module config.
