Use false instead of null for linkToAllDatabases

--- a/config/vufind/EDS.ini
+++ b/config/vufind/EDS.ini
@@ -372,7 +372,7 @@ AU = None
 ;useQueryMinLength = 3
 
 ; Display a link to an external list of all databases, below the
-; results. Default (null) omits the link.
+; results. Default (false) omits the link.
 ;linkToAllDatabases = https://some.url
 
 ; Load database URLs from LibGuides.  Default is false.
