Add ItemCoreOrder config to EDS.ini and use it to order how item fields are displayed in the EDS core.phtml page

--- a/config/vufind/EDS.ini
+++ b/config/vufind/EDS.ini
@@ -335,6 +335,17 @@ AU = None
 ; This repeatable setting can be used to filter out values using group codes:
 ;excludeGroup[] = 'URL'
 
+; This section can be used to order items based on their labels.
+[ItemCoreOrder]
+; Note the label of the item field from the EDS API first then the relative order it should be shown in
+;Title         = 0
+;Authors       = 1
+;Source        = 2
+;Abstract      = 3
+;Subject Terms = 4
+
+
+
 ; This section provides settings for optional caching of search requests.
 [SearchCache]
 ; Supported adapters: Memcached, Filesystem. Others may also work, but have not been
