Fix default sort of hierarchical facets and add tests.

--- a/build.xml
+++ b/build.xml
@@ -536,7 +536,7 @@
       </then>
     </if>
 
-    <!-- Add a local translation for tests -->
+    <!-- Add local translations for tests -->
     <if>
       <not>
         <available file="${localdir}/languages" type="dir" />
@@ -545,7 +545,19 @@
         <mkdir dir="${localdir}/languages" />
       </then>
     </if>
+    <if>
+      <not>
+        <available file="${localdir}/languages/Facets" type="dir" />
+      </not>
+      <then>
+        <mkdir dir="${localdir}/languages/Facets" />
+      </then>
+    </if>
     <append destFile="${localdir}/languages/en.ini" text="location_main = Main Library${line.separator}" />
+    <append destFile="${localdir}/languages/Facets/en.ini" text="0/level1a/ = Top Level, Sorted Last${line.separator}" />
+    <append destFile="${localdir}/languages/Facets/en.ini" text="0/level1z/ = Top Level, Sorted First${line.separator}" />
+    <append destFile="${localdir}/languages/Facets/en.ini" text="1/level1z/level2y/ = Second Level, Sorted Last${line.separator}" />
+    <append destFile="${localdir}/languages/Facets/en.ini" text="1/level1z/level2z/ = Second Level, Sorted First${line.separator}" />
   </target>
 
   <target name="setup_database" description="setup demo database">
@@ -768,7 +780,7 @@ ${git_status}
     </delete>
     <delete>
       <fileset dir="${localdir}/languages">
-        <include name="*" />
+        <include name="**/*" />
       </fileset>
     </delete>
     <delete file="${srcdir}/env.bat" />
