--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "watch:lessToSass": "grunt watch:lessToSass"
   },
   "dependencies": {
-    "autocomplete.js": "vufind-org/autocomplete.js#v2.1.7",
     "grunt": "^1.0.4",
     "grunt-contrib-less": "^2.0.0",
     "grunt-less-to-sass": "duvillierA/grunt-less-to-sass#0.0.11",
@@ -45,10 +44,6 @@
     "eslint": "^8.15.0",
     "eslint-plugin-no-jquery": "^2.7.0",
     "grunt-contrib-watch": "^1.1.0",
-    "jshint": "^2.13.4",
-    "jstree": "3.3.15",
-    "simple-keyboard": "^3.6.0",
-    "simple-keyboard-layouts": "^3.0.0",
-    "vanilla-cookieconsent": "3.0.0-rc.16"
+    "jshint": "^2.13.4"
   }
 }
