--- a/config/vufind/combined.ini
+++ b/config/vufind/combined.ini
@@ -37,8 +37,7 @@
 ;         recommendations will be displayed at the top of the column. If set to an
 ;         array of recommendation settings (as per searches.ini), the specified
 ;         recommendations will be loaded into the results column. If set to false,
-;         noresults recommendations will be suppressed (default). Adding the same
-;         recommendation module to multiple sections is unsupported.
+;         noresults recommendations will be suppressed (default).
 ; include_recommendations_noresults_side = Like include_recommendations_noresults,
 ;         but the specified recommendations will be loaded into the sidebar
 ;         column.
