--- a/config/vufind/combined.ini
+++ b/config/vufind/combined.ini
@@ -40,9 +40,8 @@
 ;         noresults recommendations will be suppressed (default).
 ; include_recommendations_noresults_side = If set to an array of recommendation
 ;         settings (as per searches.ini), the specified recommendations will be
-;         loaded into the side column. If set to false, noresults recommendations
-;         in the sidebar will be suppressed (default). Adding the same
-;         recommendation module to multiple sections is unsupported.
+;         loaded into the side column. Adding the same recommendation module to
+;         multiple sections is unsupported.
 ; filter = One or more filters to apply to search results displayed in the column.
 ;          Use multiple "filter[] = ..." lines if multiple filters are needed.
 ; hiddenFilter = One or more hidden filters to apply to search results displayed in
