--- a/config/vufind/EDS.ini
+++ b/config/vufind/EDS.ini
@@ -337,14 +337,12 @@ AU = None
 
 ; This section can be used to order items based on their labels.
 [ItemCoreOrder]
-; Note the label of the item field from the EDS API first then the relative order it should be shown in
-;Title         = 0
-;Authors       = 1
-;Source        = 2
-;Abstract      = 3
-;Subject Terms = 4
-
-
+; Note the order on the left of the equals and the item field label from the EDS API on the right.
+;1 = Title
+;2 = Authors
+;3 = Source
+;4 = Abstract
+;5 = Subject Terms
 
 ; This section provides settings for optional caching of search requests.
 [SearchCache]
