--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "sass": "^1.69.5"
   },
   "devDependencies": {
+    "all-iso-language-codes": "^1.0.13",
     "eslint": "^8.15.0",
     "eslint-plugin-no-jquery": "^2.7.0",
     "grunt-contrib-watch": "^1.1.0",
