--- a/config/vufind/EDS.ini
+++ b/config/vufind/EDS.ini
@@ -335,8 +335,9 @@ AU = None
 ; This repeatable setting can be used to filter out values using group codes:
 ;excludeGroup[] = 'URL'
 
-; This section can be used to order items based on their labels.
-[ItemCoreOrder]
+; This section can be used to order items fields, based on their labels, in both the record view and results pages.
+; You should order item fields consecutively, starting from 1, like the Title field is below.
+[ItemGlobalOrder]
 ; Note the order on the left of the equals and the item field label from the EDS API on the right.
 ;1 = Title
 ;2 = Authors
