Add ItemGlobalOrder config to EDS.ini and use it to order EDS item fields (#3284)

--- a/config/vufind/EDS.ini
+++ b/config/vufind/EDS.ini
@@ -335,6 +335,16 @@ AU = None
 ; This repeatable setting can be used to filter out values using group codes:
 ;excludeGroup[] = 'URL'
 
+; This section can be used to order items fields, based on their labels, in both the record view and results pages.
+; You should order item fields consecutively, starting from 1, like the Title field is below.
+[ItemGlobalOrder]
+; Note the order on the left of the equals and the item field label from the EDS API on the right.
+;1 = Title
+;2 = Authors
+;3 = Source
+;4 = Abstract
+;5 = Subject Terms
+
 ; This section provides settings for optional caching of search requests.
 [SearchCache]
 ; Supported adapters: Memcached, Filesystem. Others may also work, but have not been
