--- a/config/vufind/ExternalVuFind.ini
+++ b/config/vufind/ExternalVuFind.ini
@@ -1,4 +1,4 @@
-; This file configures the the ExternalVuFind connection service, which
+; This file configures the ExternalVuFind connection service, which
 ; searches a separate instance of VuFind via its public API.
 
 ; That connection is used by the ConsortialVuFind recommendation module,
