--- a/config/vufind/searchbox.ini
+++ b/config/vufind/searchbox.ini
@@ -58,7 +58,8 @@ label[] = Google
 group[] = "Other Sites"
 
 ; Uncomment one or more of the lines below to enable virtual on-screen keyboard support
-; using the specified layout(s).
+; using the specified layout(s). To control the display of these names, you can map them
+; to human-readable, internationalized text in the KeyboardLayout text domain.
 [VirtualKeyboard]
 ;layouts[] = "arabic"
 ;layouts[] = "assamese"
