--- a/config/vufind/Overdrive.ini
+++ b/config/vufind/Overdrive.ini
@@ -36,8 +36,8 @@ noAccessString = ""
 ; more overhead with it on. Default is false.
 consortiumSupport = false
 
-;AJAX Status is supported, but you can turn it off it's slowing the search results
-;page down.
+; AJAX Status is supported, but you can turn it off if it's slowing the search results
+; page down.
 enableAjaxStatus = true
 
 [API]
