Remove special character to prevent sorting problems.

--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -1805,7 +1805,7 @@ hy          = "Armenian"
 uk          = "Ukrainian"
 se          = "Northern Sámi"
 mn          = "Mongolian"
-mi          = "Māori"
+mi          = "Maori"
 
 ; This section contains special cases for languages such as right-to-left support
 [LanguageSettings]
