On collection list tab, fetch all the collection items on all archive levels if setting is true.

--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -2159,6 +2159,9 @@ HMACkey = mySuperSecretValue
 route[record] = collection
 route[search2record] = search2collection
 
+; On collection list tab, display all collection items also on lower archive levels
+; showFullHierarchyTree = true
+
 ; This section addresses hierarchical records in the Solr index
 [Hierarchy]
 ; Name of hierarchy driver to use if no value is specified in the hierarchytype
