Updated code to reflect comments by @demiankatz and @EreMaijala
Methods changed to protected,
Template Work removed,
Added Note to settings about PostgreSQL needed,
Changed Config to connection string
Updated the way pgsql calls were being accessed and returned
Updated the database call to its own method and changed the variable name from db to innReachDb.

--- a/config/vufind/SierraRest.ini
+++ b/config/vufind/SierraRest.ini
@@ -272,14 +272,11 @@ title_hold_excluded_item_codes = "e"
 ; This section can be configured to allow display of held and checked out items from
 ; INN-Reach systems
 [InnReach]
-; In order to get title information from INN-Reach we need to connect to Sierra DNA
-dna_url = [DNA address]
-dna_port = 1032
-dna_db = iii
-dna_user = [user]
-dna_password = [password]
 ; Toggle enabled to true to turn on InnReach Integration
 enabled = false
+; In order to get title information from INN-Reach we need to connect to Sierra DNA
+;This requires the PostgreSQL extension to be enabled in PHP
+sierra_db = postgresql://[DNA URL]:[DNA Port]/[DNA Database]?user=[DNA User]&password=[DNA password]&sslmode=prefer
 ; This character probably doesn't need to be changed. Records from InnReach contain an
 ; @ symbol in them for most systems
 identifier = "@"
