Changes to reflect comments on 1/23/2023
Updated the getInnReachDb function for simplicity
Updated the foreach loop to contain the counter
Undid some accidental changes
Added and updated comments

--- a/config/vufind/SierraRest.ini
+++ b/config/vufind/SierraRest.ini
@@ -275,8 +275,8 @@ title_hold_excluded_item_codes = "e"
 ; Toggle enabled to true to turn on InnReach Integration
 enabled = false
 ; In order to get title information from INN-Reach we need to connect to Sierra DNA
-;This requires the PostgreSQL extension to be enabled in PHP
-sierra_db = postgresql://[DNA URL]:[DNA Port]/[DNA Database]?user=[DNA User]&password=[DNA password]&sslmode=prefer
+; This requires the PostgreSQL extension to be enabled in PHP
+sierra_db = "postgresql://[DNA URL]:[DNA Port]/[DNA Database]?user=[DNA User]&password=[DNA password]&sslmode=prefer"
 ; This character probably doesn't need to be changed. Records from InnReach contain an
 ; @ symbol in them for most systems
 identifier = "@"
