fix overdrive help link

--- a/config/vufind/Overdrive.ini
+++ b/config/vufind/Overdrive.ini
@@ -26,6 +26,10 @@ showMyContent = "never"
 ; messages that come from the API will result in an account problem type message.
 noAccessString = ""
 
+;link to overdrive help (by default on the Overdrive Content page.). 
+;put the full URL (or false to disable it) ex: https://help.overdrive.com
+ODHelpLink = "https://help.overdrive.com"
+
 ; Enable Consortium Support (true/false). Enable this if this VuFind instance is
 ; set up for a consortium AND you have some user member libraries that have advantage
 ; accounts. This will allow the individual user to have availability based on her
