--- a/config/vufind/Folio.ini
+++ b/config/vufind/Folio.ini
@@ -122,9 +122,10 @@ extraHoldFields = requiredByDate:pickUpLocation
 ; "Recall"
 ;default_request = Hold
 
-; It is possible that the default_request method will not work in every situation; if
-; you uncomment one or more of the values below, alternate request types will be
-; attempted in the order listed if the initial request fails.
+; It is possible that the default_request method will not work in every situation,
+; e.g. if circulation rules prevent certain request types on certain item types or
+; statuses; if you uncomment one or more of the values below, alternate request
+; types will be attempted in the order listed if the initial request fails.
 ;fallback_request_type[] = Page
 ;fallback_request_type[] = Hold
 ;fallback_request_type[] = Recall
