--- a/config/vufind/Demo.ini
+++ b/config/vufind/Demo.ini
@@ -46,7 +46,7 @@ services[] = 'custom'
 ; This setting can be used to create fake checked out items for specific records.
 ; The value is a JSON document representing the status information returned by the
 ; driver.
-;transactions = '[{"id":"1234", ... "renewable": true}]';
+transactions = '[{"id":"1234", ... "renewable": true}]';
 
 ; This setting can be used to create fake historic loan items for specific records.
 ; The value is a JSON document representing the status information returned by the
