Restrict hostnames for cover proxy. (#3385)

--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -766,6 +766,13 @@ coverimagesCache = true
 ; "/.*/" to turn on caching for all proxied images.
 ;coverproxyCache[] = "/.*\.?mylibrary\.edu/"
 
+; This setting controls which hosts are allowed to provide cover images through
+; the built-in cover proxy. Images from hostnames that do not match the regular
+; expressions below will not be proxied. Be sure to define regular expressions
+; using an end of string ($) marker to prevent abuse.
+coverproxyAllowedHosts[] = "/assets\.thirdiron\.com$/"
+coverproxyAllowedHosts[] = "/\.summon\.serialssolutions\.com$/"
+
 ; These settings control the image to display when no book cover is available.
 ; If makeDynamicCovers is not false and the GD library is installed, VuFind will draw
 ; cover images on the fly. See [DynamicCovers] below for more settings. If set to
